# sphinx-autodoc-typehints

./: .coveragerc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  ignore-words.txt  pre-commit-config.sample.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sphinx_autodoc_typehints.py  test_sphinx_autodoc_typehints.py  tox.ini  tox.toml  unittest.cfg  whitelist.txt
.github/: FUNDING.yaml  FUNDING.yml  SECURITY.md
.github/workflows/: check.yaml  check.yml  codeqa-test.yml  release.yaml  release.yml
src/sphinx_autodoc_typehints/: __init__.py  _annotations.py  _intersphinx.py  _parser.py  _resolver.py  attributes_patch.py  parser.py  patches.py
src/sphinx_autodoc_typehints/_formats/: __init__.py  _base.py  _numpydoc.py  _sphinx.py
src/sphinx_autodoc_typehints/_resolver/: __init__.py  _attrs.py  _instance_vars.py  _stubs.py  _type_comments.py  _type_hints.py  _util.py
test/: conftest.py  index.rst  test_sphinx_autodoc_typehints.py
test/fake_docs/: conf.py  index.rst
test/fake_package/: __init__.py
test/roots/test-dummy/: dummy_module.py  index.rst
tests/: conftest.py  test_annotated_doc.py  test_annotations.py  test_attributes_patch.py  test_autodoc.py  test_conftest.py  test_dataclass_py36.py  test_format_annotation.py  test_formats_numpydoc.py  test_formats_sphinx.py  test_generator_yields.py  test_guarded_import.py  test_init.py  test_integration.py  test_integration_autodoc_type_aliases.py  test_integration_issue_347.py  test_integration_issue_384.py  test_integration_issue_572.py  test_integration_issue_599.py  test_intersphinx_mapping.py  test_method_lookup.py  test_pep695.py  test_project_format.py  test_pyi_stubs.py  test_resolver.py  test_rtype_separation.py  test_safe_parse.py  test_sphinx_autodoc_typehints.py  test_typehints_parser.py  test_version.py
tests/docs/annotation/test_code/: __init__.py
tests/roots/: test_nested_attrs_localns.py
tests/roots/test-annotated-doc/: conf.py  mod.py
tests/roots/test-annotated-doc-numpydoc/: conf.py  mod.py
tests/roots/test-annotation/: conf.py
tests/roots/test-attrs/: attrs_mod.py
tests/roots/test-comments/: index.rst
tests/roots/test-comments/test_code/: __init__.py
tests/roots/test-dataclass/: conf.py  dataclass_module.py  index.rst
tests/roots/test-dummy/: conf.py  dummy_module.py  dummy_module_future_annotations.py  dummy_module_simple.py  dummy_module_simple_default_role.py  dummy_module_simple_no_use_rtype.py  dummy_module_without_complete_typehints.py  export_module.py  future_annotations.rst  index.rst  simple.rst  simple_default_role.rst  simple_no_use_rtype.rst  without_complete_typehints.rst  wrong_module_path.py  wrong_module_path.rst
tests/roots/test-integration/: conf.py
tests/roots/test-issue_572/: mod_forward_ref.py
tests/roots/test-issue_599/: conf.py  mod_eager.py
tests/roots/test-numpydoc/: conf.py
tests/roots/test-pyi-stubs/: c_ext_mod.c  c_ext_mod.pyi  conf.py  index.rst  stub_mod.py  stub_mod.pyi
tests/roots/test-pyi-stubs/native_pkg/: __init__.py  _native.c  warc.pyi
tests/roots/test-resolve-typing-guard/: conf.py  demo_typing_guard.py  demo_typing_guard_dummy.py
tests/roots/test-resolve-typing-guard-tmp/: conf.py  demo_typing_guard.py  index.rst
tests/test_resolver/: test_attrs.py  test_instance_vars.py  test_no_type_check.py  test_stubs.py  test_type_comments.py  test_type_hints.py  test_util.py
