[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.25",
]

[project]
name = "sphinx-autodoc-typehints"
description = "Type hints (PEP 484) support for the Sphinx autodoc extension"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [
  { name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" },
]
authors = [
  { name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation :: Sphinx",
]
dynamic = [
  "version",
]
dependencies = [
  "sphinx>=8.0.2",
]
optional-dependencies.docs = [
  "furo>=2024.8.6",
]
optional-dependencies.numpy = [
  "nptyping>=2.5",
]
optional-dependencies.testing = [
  "covdefaults>=2.3",
  "coverage>=7.6.1",
  "defusedxml>=0.7.1",         # required by sphinx.testing
  "diff-cover>=9.1.1",
  "pytest>=8.3.2",
  "pytest-cov>=5",
  "sphobjinv>=2.3.1.1",
  "typing-extensions>=4.12.2",
]
urls.Changelog = "https://github.com/tox-dev/sphinx-autodoc-typehints/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/tox-dev/sphinx-autodoc-typehints"
urls.Source = "https://github.com/tox-dev/sphinx-autodoc-typehints"
urls.Tracker = "https://github.com/tox-dev/sphinx-autodoc-typehints/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/sphinx_autodoc_typehints/version.py"
version.source = "vcs"

[tool.ruff]
target-version = "py310"
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101", # no type annotation for self
  "ANN401", # allow Any as type annotation
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "DOC",    # no sphinx support
  "ISC001", # Conflict with formatter
  "S104",   # Possible binding to all interface
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLC2701", # private imports
  "PLR0913", # any number of arguments in tests
  "PLR0917", # any number of arguments in tests
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S101",    # asserts allowed in tests
  "S603",    # `subprocess` call: check for execution of untrusted input
]
lint.isort = { known-first-party = [
  "sphinx_autodoc_typehints",
  "tests",
], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
ignore-words = "ignore-words.txt"
write-changes = true
count = true

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox/*/lib/python*/site-packages",
  ".tox/pypy*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  ".tox/*/.venv/lib/python*/site-packages",
  ".tox/pypy*/.venv/site-packages",
  ".tox\\*\\.venv\\Lib\\site-packages",
  "*/src",
  "*\\src",
]
report.fail_under = 85
report.omit = [
]
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = "^(.*/roots/.*)|(tests/test_integration.*.py)$"
overrides = [
  { module = [
    "sphobjinv.*",
  ], ignore_missing_imports = true },
]
