[metadata]
name = sphinx-autodoc-typehints
description = Type hints (PEP 484) support for the Sphinx autodoc extension
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
license = MIT
project_urls =
    Change log = https://github.com/agronholm/sphinx-autodoc-typehints/blob/master/CHANGELOG.rst
    Source code = https://github.com/agronholm/sphinx-autodoc-typehints
    Issue tracker = https://github.com/agronholm/sphinx-autodoc-typehints/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: Sphinx :: Extension
    Topic :: Documentation :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = sphinx_autodoc_typehints
python_requires = >=3.6
install_requires = Sphinx >= 3.0

[options.extras_require]
test =
    pytest >= 3.1.0
    typing_extensions >= 3.5
    dataclasses; python_version == "3.6"
    sphobjinv >= 2.0
    Sphinx >= 3.2.0
type_comments =
    typed_ast >= 1.4.0; python_version < "3.8"

[flake8]
max-line-length = 99

[tool:pytest]
addopts = -rsx --tb=short
testpaths = tests
