[metadata]
name = sphinx_autodoc_typehints
description = Type hints (PEP 484) support for the Sphinx autodoc extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/sphinx-autodoc-typehints
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation :: Sphinx
download_url = https://github.com/tox-dev/sphinx-autodoc-typehints/archive/main.zip
project_urls =
    Changelog = https://github.com/tox-dev/sphinx-autodoc-typehints/blob/main/CHANGELOG.md
    Source=https://github.com/tox-dev/sphinx-autodoc-typehints
    Tracker=https://github.com/tox-dev/sphinx-autodoc-typehints/issues

[options]
packages = find:
install_requires =
    Sphinx>=4
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
testing =
    covdefaults>=2
    coverage>=6
    diff-cover>=6.4
    pytest>=6
    pytest-cov>=3
    sphobjinv>=2
    typing-extensions>=3.5
type_comments =
    typed-ast>=1.4.0;python_version < "3.8"

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src
other =
    .
    */sphinx-autodoc-typehints
    *\sphinx-autodoc-typehints

[coverage:report]
fail_under = 55

[coverage:html]
show_contexts = true
skip_covered = false

[flake8]
max-complexity = 22
max-line-length = 120
ignore = E203, W503
unused-arguments-ignore-abstract-functions = true
noqa-require-code = true

[pep8]
max-line-length = 120
